--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Shweta.
-            I am here to learn app development.
-        </div>
+        <div>
+            
+            
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
