--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,15 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div>
+        <div class="center">
+            <img src="ui/madi.png" class="img-medium"/>
+        </div>
+        <br>
+        <div class="center tex-big bold">
+            Hi! Iam Shweta and this is my first webapp.
+            <h4> A new heading</h4>
+            I've made some new local changes.
+            </div>
             
             
         <script type="text/javascript" src="/ui/main.js">
