[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,17 @@
 <html>
+    <head>
+        <title>Shweta| article -one</title>
+    </head>
+    <div>
+        <a href ="/">Home</a>
+    </div>
+     <div>
+        <p>This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .
+        </p>
+    </div>
+    <div>
+        <p>This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .This is my first article .
+        </p>
+    </div>
+    
 </html>
